# moku-instrument-forge-mono-repo

./: .gitignore  .gitmodules  ARCHITECTURE_V2_COMPLETE.md  CLAUDE.md  DOC_CATEGORIZATION.md  DOC_CATEGORIZATION_v2.md  DS1199_SESSION_HANDOFF.md  OPTION_A_TEST_SUMMARY.md  P4_AGENT_REFACTOR_HANDOFF.md  README.md  RECOVERY.md  SESSION_HANDOFF.md  TEMPLATE.md  WORKFLOW_GUIDE.md  claude-setup-chore.md  llms.txt  pyproject.toml
.claude/: manifest.json
.claude/agents/deployment-orchestrator/: agent.md
.claude/agents/hardware-debug/: agent.md
.claude/agents/probe-design-orchestrator/: agent.md
.claude/archive/commands/: cross-validate.md  init-probe.md  probe-status.md
.claude/commands/: cross-validate.md  customize-monorepo.md  init-probe.md  probe-status.md  validate-probe-structure.md
.claude/shared/: ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_OVERVIEW_LEGACY.md  CONTEXT_MANAGEMENT.md  PROBE_WORKFLOW.md  SESSION_HANDOFF.md
.obsidian/: app.json  workspace.json
archive/: README.md
docs/: README.md
docs/migration/: FORGE_VHDL_P1.md  FORGE_VHDL_P2.md  FORGE_VHDL_P3.md  FORGE_VHDL_P4.md  FORGE_VHDL_PLAN.md  VOLTAGE_TYPE_SYSTEM_DESIGN.md  voltage_types_reference.py
probes/: README.md
scripts/: setup_forge_path.py
