[project]
name = "moku-instrument-forge-mono-repo"
version = "1.0.0"
description = "Monorepo for Moku custom EMFI probe drivers (DS1120-PD, DS1140-PD)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sealab Team" }
]

dependencies = [
    "cocotb>=1.8.0",
    "pytest>=7.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist>=3.0.0",  # Parallel test execution
    "ruff>=0.1.0",          # Python linting
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["libs", "probes"]
norecursedirs = [".venv", "sim_build", "__pycache__", ".git", "forge"]
addopts = "--ignore=tests/run.py --ignore=tests/test_configs.py -v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.uv]
dev-dependencies = [
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
]
